# Soul

./: .gitignore  ARCHITECTURE.md  pyproject.toml  soul.yaml
.claude/: settings.local.json
src/soul/connectors/: qq_connector.py  websocket_server.py
src/soul/contracts/: __init__.py  capability.py  envelope.py  events.py  node.py  personality.py  protocol.py  response.py  spark.py  state.py  subscription.py
src/soul/core/: __init__.py  action_registry.py  event_bus.py  node_registry.py  pipeline.py  router.py  session_manager.py  state_aggregator.py
src/soul/nodes/: __init__.py  action.py  base.py  memory.py  perception.py  reasoning.py
src/soul/runtime/: engine.py  router.py  session_manager.py
src/soul/runtime/llm/: ollama_client.py
tests/: ws_client.py
