[project]
name = "soul"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "websockets>=12.0",
  "requests",
  "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]